responsive menu for home page and fix for columns overlap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -155,11 +155,11 @@ h6, .h6 {
 @media (min-width: 40em) {
   /* Pull out the header and footer */
   .masthead {
-    position: fixed;
+    position: relative;
     top: 0;
   }
   .mastfoot {
-    position: fixed;
+    position: relative;
     bottom: 0;
   }
   /* Start the vertical centering */
@@ -256,6 +256,7 @@ h6, .h6 {
 
 .profile-img {
   border: 1px solid grey;
+  width: 100%;
 }
 
 .card-block {
@@ -266,4 +267,10 @@ h6, .h6 {
 .skill {
   margin-top: 10px;
   margin-bottom: 10px;
+}
+
+@media (max-width: 40em) {
+  #menu-button {
+    left: 9em;
+  }
 }
